Integrating get_procs() method, done with sgd, frugal and adaptive, but still have hard code part in get_q_ests()

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,61 +32,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_stepsize(k, stepsize):\n",
+    "def set_sgd_stepsize(k, stepsize, length=None):\n",
     "    if stepsize=='const':\n",
-    "        return 1\n",
+    "        return 1 * np.ones(length) if not length else 1\n",
     "    elif stepsize=='2_div_sqrt_k':\n",
-    "        return 2/math.sqrt(k)\n",
+    "        return 2/math.sqrt(k)* np.ones(length) if not length else 2/math.sqrt(k)\n",
     "    elif stepsize=='0.002_div_sqrt_k':\n",
-    "        return 0.002/math.sqrt(k)\n",
-    "    raise Exception('stepsize parameter is wrong')"
+    "        return 0.002/math.sqrt(k) * np.ones(length) if not length else 0.002/math.sqrt(k)\n",
+    "    raise Exception('stepsize parameter is wrong')\n",
+    "    \n",
+    "def sgd(q, x, tau, alpha):\n",
+    "    if x > q:\n",
+    "        q = q + alpha*tau\n",
+    "    else:\n",
+    "        q = q - alpha*(1-tau)  \n",
+    "    return q\n",
+    "    \n",
+    "def frugal(q, x, tau):\n",
+    "    rdn = np.random.uniform()\n",
+    "    if x > q and rdn > 1-tau:\n",
+    "        q += 1\n",
+    "    elif x < q and rdn > tau:\n",
+    "        q -= 1\n",
+    "    return q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_procs(dataset, step_size, tau_lst):\n",
-    "    if len(dataset.shape)!= 1: \n",
-    "        raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
-    "        \n",
+    "def get_sgd_procs(dataset, tau_lst, stepsize):\n",
     "    procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
     "    for idx, tau in enumerate(tau_lst):\n",
     "        q = 0\n",
     "        q_sgd_proc = procs[idx]\n",
     "        # change stepsize\n",
-    "        if step_size != 'frugal':\n",
+    "        if stepsize != 'frugal':\n",
     "            for k, x in enumerate(dataset):\n",
-    "#                 if idx==1: print (k, ':', q)\n",
-    "                alpha = set_stepsize(k+1, step_size)\n",
-    "                if x > q:\n",
-    "                    q = q + alpha*tau\n",
-    "                else:\n",
-    "                    q = q - alpha*(1-tau)\n",
-    "                q_sgd_proc[k] = q\n",
-    "        \n",
-    "        # frugal\n",
-    "        else:\n",
-    "            rdn_lst = np.random.uniform(0,1, dataset.shape[0])\n",
-    "            for k, x in enumerate(dataset):\n",
-    "                rdn = rdn_lst[k]\n",
-    "                if x > q and rdn > 1-tau:\n",
-    "                    q += 1\n",
-    "                elif x < q and rdn > tau:\n",
-    "                    q -= 1\n",
-    "                q_sgd_proc[k] = q\n",
+    "                alpha = set_sgd_stepsize(k+1, stepsize)\n",
+    "                q_sgd_proc[k] = sgd(q,x,tau,alpha)\n",
+    "    return procs\n",
+    "\n",
+    "def get_frugal_procs(dataset, tau_lst):\n",
+    "    procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
+    "    for idx, tau in enumerate(tau_lst):\n",
+    "        q = 0\n",
+    "        q_frugal_proc = procs[idx]\n",
+    "        for k, x in enumerate(dataset):\n",
+    "            q_frugal_proc[k] = frugal(q,x,tau)\n",
     "    return procs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_adaptive_procs(dataset, tau_lst, stepsize, update_size = 200):\n",
+    "    print (\"stepsize is {}\".format(stepsize))\n",
+    "    if update_size*5 > dataset.shape[0]:\n",
+    "        print (\"Warning!\",\n",
+    "            \"Cannot do the step size trick because the dataset of size {} is too small for the update size {}\"\n",
+    "            .format(dataset.shape[0], update_size))\n",
+    "    proc = np.zeros((dataset.shape[0], len(tau_lst)))\n",
+    "    q_prev, q_now = np.zeros(len(tau_lst)), np.zeros(len(tau_lst))\n",
+    "    alpha_adaptation = np.ones(len(tau_lst))\n",
+    "\n",
+    "    for k, x in enumerate(dataset):          \n",
+    "        if k % update_size == 0 and k >0:\n",
+    "#             print (k,q_now-q_prev)\n",
+    "            update_var = update_stepsize(alpha_arr, q_now-q_prev, stepsize, update_size)\n",
+    "#             print ('update_var', update_var)\n",
+    "            alpha_adaptation = alpha_adaptation * update_var\n",
+    "#             print ('alpha_adaptation', alpha_adaptation)\n",
+    "            q_prev = [i for i in q_now]\n",
+    "        if stepsize != 'frugal': \n",
+    "            alpha_arr = set_sgd_stepsize(k+1, stepsize, len(tau_lst))* alpha_adaptation\n",
+    "#             if k % update_size == 0: print('alpha_arr', alpha_arr)\n",
+    "        for i, q in enumerate(q_now):\n",
+    "            tau = tau_lst[i]\n",
+    "            alpha = alpha_arr[i]\n",
+    "            if stepsize != 'frugal':\n",
+    "                q = sgd(q, x, tau, alpha)\n",
+    "            else: \n",
+    "                q = frugal(q, x, tau)\n",
+    "            q_now[i] = q\n",
+    "        proc[k] = q_now\n",
+    "#     print (alpha_arr)\n",
+    "    return proc.T\n",
+    "\n",
+    "def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
+    "    update_var = np.ones(len(diff))\n",
+    "    for i, a in enumerate(alpha_arr):\n",
+    "        d = diff[i]\n",
+    "        if a * update_size * 0.25 < abs(d): update_var[i] = 2\n",
+    "        elif a * update_size * 0.02 > abs(d): update_var[i] = 1/2\n",
+    "#     print ('step_size', update_var)\n",
+    "    return update_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_procs(dataset, tau_lst, method_name, **kwargs):\n",
+    "    if len(dataset.shape)!= 1: \n",
+    "        raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
+    "#     print (\"get_procs() using method {}\".format(method_name))\n",
+    "    method_dict = {\n",
+    "        'sgd': get_sgd_procs(dataset, tau_lst, **kwargs),\n",
+    "        'frugal': get_frugal_procs(dataset, tau_lst),\n",
+    "        'adaptive': get_adaptive_procs(dataset, tau_lst, **kwargs),\n",
+    "    }\n",
+    "    \n",
+    "    return method_dict.get(method_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,30 +171,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_q_ests(dataset, step_size, tau_lst):\n",
-    "\n",
+    "# Get quantile estimates\n",
+    "def get_q_ests(dataset, stepsize, tau_lst):\n",
+    "    print (\"get_q_est stepsize is {}\".format(stepsize))\n",
     "    if len(dataset.shape)>2:\n",
     "        raise Exception('Dataset for q_est calculation of wrong shape: {}, should be 1d or 2d array'\n",
     "                        .format(str(dataset.shape)))\n",
     "    if len(dataset.shape)==1:\n",
-    "        procs = get_procs(dataset, step_size, tau_lst)\n",
+    "        procs = get_procs(dataset, tau_lst, method_name='adaptive', stepsize=stepsize)\n",
     "        res = get_res(procs)\n",
     "    else:\n",
     "        res = np.zeros((dataset.shape[0], len(tau_lst)))\n",
     "        procs = np.zeros((dataset.shape[0], len(tau_lst), dataset.shape[1]))\n",
     "        for idx, dt in enumerate(dataset):\n",
-    "            procs[idx] = get_procs(dt, step_size, tau_lst)\n",
+    "            procs[idx] = get_procs(dt, tau_lst, method_name='adaptive', stepsize=stepsize)\n",
     "            res[idx] = get_res(procs[idx])\n",
     "    return res, procs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,19 +209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Main functions "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,11 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def all_method_comparisons(sgd_lst, root_folder='SGD'):\n",
+    "def all_method_comparisons(compare_lst, root_folder='SGD'):\n",
     "    \n",
     "    args_dict = {\n",
     "        'distro': (distros, [1000], ['const'], True),\n",
@@ -208,7 +275,7 @@
     "        'data_sequence':(['gau_1', 'gau_1'], [1000], ['const'], False, True),\n",
     "    }\n",
     "    \n",
-    "    for t in sgd_lst:\n",
+    "    for t in compare_lst:\n",
     "        print (t)\n",
     "        folder_name = \"Experiment_results/{}/{}/\".format(root_folder, t)\n",
     "        \n",
@@ -225,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,127 +305,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check if folder exists, if not, then create new empty folders\n",
-    "def initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['Frugal_SGD', 'SGD'], \n",
-    "                       sub_fd_lst = ['SGD/'], subsub_fd_lst = sgd_lst):\n",
-    "    \n",
-    "    for fd in fd_lst:\n",
-    "        if not os.path.exists(main_fd+fd):\n",
-    "            os.makedirs(main_fd+fd)\n",
-    "\n",
-    "    for ss_fd in subsub_fd_lst:\n",
-    "        for s_fd in sub_fd_lst:\n",
-    "            fd_name = main_fd+s_fd+ss_fd\n",
-    "            if not os.path.exists(fd_name):\n",
-    "                os.makedirs(fd_name)\n",
-    "\n",
-    "initialize_folders()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "distro\n",
-      "False\n",
-      "[['mix' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['exp' '1000' 'const']]\n",
-      "Experiment_results/SGD/distro/mix_q_true.txt\n",
-      "Experiment_results/SGD/distro/mix_q_batches.txt\n",
-      "Experiment_results/SGD/distro/mix_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/mix_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/mix_E.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_true.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_batches.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/gau_1_E.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_true.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_batches.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/gau_2_E.txt\n",
-      "Experiment_results/SGD/distro/exp_q_true.txt\n",
-      "Experiment_results/SGD/distro/exp_q_batches.txt\n",
-      "Experiment_results/SGD/distro/exp_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/exp_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/exp_E.txt\n",
-      "data_size\n",
-      "False\n",
-      "[['gau_2' '100' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['gau_2' '10000' 'const']]\n",
-      "Experiment_results/SGD/data_size/100_q_true.txt\n",
-      "Experiment_results/SGD/data_size/100_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/100_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/100_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/100_E.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/1000_E.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/10000_E.txt\n",
       "step_size\n",
       "False\n",
       "[['gau_1' '1000' 'const']\n",
       " ['gau_1' '1000' '2_div_sqrt_k']\n",
       " ['gau_1' '1000' '0.002_div_sqrt_k']]\n",
-      "Experiment_results/SGD/step_size/const_q_true.txt\n",
-      "Experiment_results/SGD/step_size/const_q_batches.txt\n",
-      "Experiment_results/SGD/step_size/const_q_est_res.txt\n",
-      "Experiment_results/SGD/step_size/const_q_est_proc.txt\n",
-      "Experiment_results/SGD/step_size/const_E.txt\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_true.txt\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_batches.txt\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_res.txt\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_proc.txt\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_E.txt\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_true.txt\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_batches.txt\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_res.txt\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_proc.txt\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_E.txt\n",
-      "data_sequence\n",
-      "True\n",
-      "[['gau_1' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']]\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_true.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_batches.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_est_res.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_E.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_true.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_batches.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_est_res.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_sequence/shuffle_E.txt\n"
+      "get_q_est stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "stepsize is const\n",
+      "Experiment_results/Adaptive_stepsize/step_size/const_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/const_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/const_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/const_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/const_E.txt\n",
+      "get_q_est stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "stepsize is 2_div_sqrt_k\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_E.txt\n",
+      "get_q_est stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "stepsize is 0.002_div_sqrt_k\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_E.txt\n"
      ]
     }
    ],
    "source": [
     "# Run all functions\n",
     "\n",
-    "main_folder = 'SGD'\n",
+    "main_folder = 'Adaptive_stepsize'\n",
     "\n",
-    "initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['Frugal_SGD', 'SGD'], \n",
-    "                       sub_fd_lst = ['SGD/'], subsub_fd_lst = sgd_lst)\n",
-    "all_method_comparisons(sgd_lst, main_folder)"
+    "initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['Adaptive_stepsize'], \n",
+    "                       sub_fd_lst = ['Adaptive_stepsize/'], subsub_fd_lst = ['step_size'])\n",
+    "all_method_comparisons(['step_size'], main_folder)"
    ]
   },
   {
@@ -414,13 +437,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/Adaptive_stepsize/step_size/const_\n",
+      "Experiment_results/Adaptive_stepsize/step_size/2_div_sqrt_k_\n",
+      "Experiment_results/Adaptive_stepsize/step_size/0.002_div_sqrt_k_\n",
+      "Experiment_results/Adaptive_stepsize/distro/gau_1_\n",
+      "Experiment_results/Adaptive_stepsize/distro/mix_\n",
+      "Experiment_results/Adaptive_stepsize/distro/gau_2_\n",
+      "Experiment_results/Adaptive_stepsize/distro/exp_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_\n"
+     ]
+    }
+   ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/SGD/\")"
+    "plot_charts(\"Experiment_results/Adaptive_stepsize/\")"
    ]
   },
   {
