Mehtod_sgd_frugal_adaptive.py done, the Experiment_final still get some hard code parts to be modified

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "import os\n",
     "from Dataset_generation import get_dataset, get_q_batches, get_q_true, get_shuffled_dataset\n",
-    "from Output_data_generation import initialize_folders, get_settings, get_file_name, save_data"
+    "from Output_data_generation import initialize_folders, get_settings, get_file_name, save_data\n",
+    "from Quantile_procs import get_procs"
    ]
   },
   {
@@ -28,133 +29,6 @@
    "source": [
     "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
     "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_sgd_stepsize(k, stepsize, length=None):\n",
-    "    if stepsize=='const':\n",
-    "        return 1 * np.ones(length) if not length else 1\n",
-    "    elif stepsize=='2_div_sqrt_k':\n",
-    "        return 2/math.sqrt(k)* np.ones(length) if not length else 2/math.sqrt(k)\n",
-    "    elif stepsize=='0.002_div_sqrt_k':\n",
-    "        return 0.002/math.sqrt(k) * np.ones(length) if not length else 0.002/math.sqrt(k)\n",
-    "    raise Exception('stepsize parameter is wrong')\n",
-    "    \n",
-    "def sgd(q, x, tau, alpha):\n",
-    "    if x > q:\n",
-    "        q = q + alpha*tau\n",
-    "    else:\n",
-    "        q = q - alpha*(1-tau)  \n",
-    "    return q\n",
-    "    \n",
-    "def frugal(q, x, tau):\n",
-    "    rdn = np.random.uniform()\n",
-    "    if x > q and rdn > 1-tau:\n",
-    "        q += 1\n",
-    "    elif x < q and rdn > tau:\n",
-    "        q -= 1\n",
-    "    return q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_sgd_procs(dataset, tau_lst, stepsize):\n",
-    "    procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
-    "    for idx, tau in enumerate(tau_lst):\n",
-    "        q = 0\n",
-    "        q_sgd_proc = procs[idx]\n",
-    "        # change stepsize\n",
-    "        if stepsize != 'frugal':\n",
-    "            for k, x in enumerate(dataset):\n",
-    "                alpha = set_sgd_stepsize(k+1, stepsize)\n",
-    "                q_sgd_proc[k] = sgd(q,x,tau,alpha)\n",
-    "    return procs\n",
-    "\n",
-    "def get_frugal_procs(dataset, tau_lst):\n",
-    "    procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
-    "    for idx, tau in enumerate(tau_lst):\n",
-    "        q = 0\n",
-    "        q_frugal_proc = procs[idx]\n",
-    "        for k, x in enumerate(dataset):\n",
-    "            q_frugal_proc[k] = frugal(q,x,tau)\n",
-    "    return procs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_adaptive_procs(dataset, tau_lst, stepsize, update_size = 200):\n",
-    "    print (\"stepsize is {}\".format(stepsize))\n",
-    "    if update_size*5 > dataset.shape[0]:\n",
-    "        print (\"Warning!\",\n",
-    "            \"Cannot do the step size trick because the dataset of size {} is too small for the update size {}\"\n",
-    "            .format(dataset.shape[0], update_size))\n",
-    "    proc = np.zeros((dataset.shape[0], len(tau_lst)))\n",
-    "    q_prev, q_now = np.zeros(len(tau_lst)), np.zeros(len(tau_lst))\n",
-    "    alpha_adaptation = np.ones(len(tau_lst))\n",
-    "\n",
-    "    for k, x in enumerate(dataset):          \n",
-    "        if k % update_size == 0 and k >0:\n",
-    "#             print (k,q_now-q_prev)\n",
-    "            update_var = update_stepsize(alpha_arr, q_now-q_prev, stepsize, update_size)\n",
-    "#             print ('update_var', update_var)\n",
-    "            alpha_adaptation = alpha_adaptation * update_var\n",
-    "#             print ('alpha_adaptation', alpha_adaptation)\n",
-    "            q_prev = [i for i in q_now]\n",
-    "        if stepsize != 'frugal': \n",
-    "            alpha_arr = set_sgd_stepsize(k+1, stepsize, len(tau_lst))* alpha_adaptation\n",
-    "#             if k % update_size == 0: print('alpha_arr', alpha_arr)\n",
-    "        for i, q in enumerate(q_now):\n",
-    "            tau = tau_lst[i]\n",
-    "            alpha = alpha_arr[i]\n",
-    "            if stepsize != 'frugal':\n",
-    "                q = sgd(q, x, tau, alpha)\n",
-    "            else: \n",
-    "                q = frugal(q, x, tau)\n",
-    "            q_now[i] = q\n",
-    "        proc[k] = q_now\n",
-    "#     print (alpha_arr)\n",
-    "    return proc.T\n",
-    "\n",
-    "def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
-    "    update_var = np.ones(len(diff))\n",
-    "    for i, a in enumerate(alpha_arr):\n",
-    "        d = diff[i]\n",
-    "        if a * update_size * 0.25 < abs(d): update_var[i] = 2\n",
-    "        elif a * update_size * 0.02 > abs(d): update_var[i] = 1/2\n",
-    "#     print ('step_size', update_var)\n",
-    "    return update_var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_procs(dataset, tau_lst, method_name, **kwargs):\n",
-    "    if len(dataset.shape)!= 1: \n",
-    "        raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
-    "#     print (\"get_procs() using method {}\".format(method_name))\n",
-    "    method_dict = {\n",
-    "        'sgd': get_sgd_procs(dataset, tau_lst, **kwargs),\n",
-    "        'frugal': get_frugal_procs(dataset, tau_lst),\n",
-    "        'adaptive': get_adaptive_procs(dataset, tau_lst, **kwargs),\n",
-    "    }\n",
-    "    \n",
-    "    return method_dict.get(method_name)"
    ]
   },
   {
@@ -171,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
