--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import numpy as np\n",
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,21 +205,314 @@
       "get_q_est stepsize is const\n",
       "get_procs() using method p2\n",
       "p2\n",
-      "stepsize is const\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (987,13) into shape (5,1000)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-8c111caa7a5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['P2'], \n\u001b[1;32m      6\u001b[0m                        sub_fd_lst = ['P2/'], subsub_fd_lst = compare_lst)\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mall_method_comparisons\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompare_lst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmain_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-8-af371e69f5a0>\u001b[0m in \u001b[0;36mall_method_comparisons\u001b[0;34m(compare_lst, root_folder)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mquantile_method_compare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolder_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistro_lst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatasize_lst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstepsize_lst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtau_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-634cdae69bd2>\u001b[0m in \u001b[0;36mquantile_method_compare\u001b[0;34m(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst)\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ms_test\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_shuffled_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatasize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0mq_est_res\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_est_proc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_q_ests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstepsize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtau_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_normalized_e\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_batches\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_est_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-117b8322c207>\u001b[0m in \u001b[0;36mget_q_ests\u001b[0;34m(dataset, stepsize, tau_lst)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mprocs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtau_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m             \u001b[0mprocs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_procs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtau_lst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'p2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstepsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstepsize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m             \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_res\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprocs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (987,13) into shape (5,1000)"
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/distro/mix_q_true.txt\n",
+      "Experiment_results/P2/distro/mix_q_batches.txt\n",
+      "Experiment_results/P2/distro/mix_q_est_res.txt\n",
+      "Experiment_results/P2/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/mix_E.txt\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/distro/gau_1_q_true.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/gau_1_E.txt\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/distro/gau_2_q_true.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/gau_2_E.txt\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/distro/exp_q_true.txt\n",
+      "Experiment_results/P2/distro/exp_q_batches.txt\n",
+      "Experiment_results/P2/distro/exp_q_est_res.txt\n",
+      "Experiment_results/P2/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/exp_E.txt\n",
+      "data_size\n",
+      "False\n",
+      "[['gau_2' '100' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['gau_2' '10000' 'const']]\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Experiment_results/P2/data_size/100_q_true.txt\n",
+      "Experiment_results/P2/data_size/100_q_batches.txt\n",
+      "Experiment_results/P2/data_size/100_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/100_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/100_E.txt\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/data_size/1000_q_true.txt\n",
+      "Experiment_results/P2/data_size/1000_q_batches.txt\n",
+      "Experiment_results/P2/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/1000_E.txt\n",
+      "get_q_est stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "get_procs() using method p2\n",
+      "p2\n",
+      "stepsize is const\n",
+      "Experiment_results/P2/data_size/10000_q_true.txt\n",
+      "Experiment_results/P2/data_size/10000_q_batches.txt\n",
+      "Experiment_results/P2/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/10000_E.txt\n"
      ]
     }
    ],
@@ -225,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,13 +579,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/P2/distro/gau_1_\n",
+      "Experiment_results/P2/distro/mix_\n",
+      "Experiment_results/P2/distro/gau_2_\n",
+      "Experiment_results/P2/distro/exp_\n",
+      "Experiment_results/P2/data_size/100_\n",
+      "Experiment_results/P2/data_size/10000_\n",
+      "Experiment_results/P2/data_size/1000_\n"
+     ]
+    }
+   ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/Adaptive_stepsize/\")"
+    "plot_charts(\"Experiment_results/P2/\")"
    ]
   },
   {
